updated font icons from font awesome

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
    <!-- Custom styles for this template -->
+   <script src="https://kit.fontawesome.com/d5c01a9372.js" crossorigin="anonymous"></script>
    <link href="css/index.css" rel="stylesheet">
 
   <title>Travel California</title>
@@ -186,6 +187,7 @@
   <footer>
     <div class="container">
       <div class="footer">
+        <i class="fa-solid fa-copyright"></i>
         <p>Copyright Hayley Callender 2022</p>
       </div>
     </div>
